<resources>
    <string name="app_name">Museazy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="description">Description</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Register">Register</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="museazy">Museazy</string>
</resources>
